syntax = "proto3";

option go_package = "github.com/NeptuneG/go-back/services/payment/proto";
package neptuneg.go_back.serivces.payment;

import "google/api/annotations.proto";

service PaymentService {
  rpc CreateLiveEventOrder(CreateLiveEventOrderRequest)
      returns (CreateLiveEventOrderResponse) {
    option (google.api.http) = {
      post : "/v1/payments/live_events"
      body : "*"
    };
  };

  rpc CreateUserPoints(CreateUserPointsRequest)
      returns (CreateUserPointsResponse) {
    option (google.api.http) = {
      post : "/v1/payments/user_points"
      body : "*"
    };
  };

  rpc GetUserPoints(GetUserPointsRequest)
      returns (GetUserPointsResponse) {
    option (google.api.http) = {
      get : "/v1/payments/user_points"
    };
  };
}

message CreateLiveEventOrderRequest {
  string user_id = 1;
  string live_event_id = 2;
  int32 price = 3;
  int32 user_points = 4;
}

message CreateLiveEventOrderResponse { string state = 1; }

message CreateUserPointsRequest {
  string user_id = 1;
  int32 user_points = 2;
}

message CreateUserPointsResponse {
  string user_id = 1;
  int64 user_points = 2;
}

message GetUserPointsRequest { string user_id = 1; }

message GetUserPointsResponse {
  string user_id = 1;
  int64 user_points = 2;
}
